# yoru-speech

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
packaging/hyprland/: README.md  yoru-dictate
packaging/systemd/: README.md  yoru-speech.service
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  error_event.hpp  event_bus.hpp  events.hpp  logger.cpp  logger.hpp  session_id.hpp
src/domains/audio/: CMakeLists.txt  capture_device.cpp  capture_device.hpp  events.hpp  recording.cpp  recording.hpp  recording_manager.cpp  recording_manager.hpp
src/domains/clipboard/: CMakeLists.txt  auto_clipboard.cpp  auto_clipboard.hpp  wl_clipboard_adapter.cpp  wl_clipboard_adapter.hpp
src/domains/config/: CMakeLists.txt  configuration.hpp  configuration_manager.cpp  configuration_manager.hpp  events.hpp  toml_codec.cpp  toml_codec.hpp
src/domains/ipc/: CMakeLists.txt  command_dispatcher.cpp  command_dispatcher.hpp  event_bridge.cpp  event_bridge.hpp  ipc_server.cpp  ipc_server.hpp  ipc_service.cpp  ipc_service.hpp  message_codec.cpp  message_codec.hpp
src/domains/session/: CMakeLists.txt  events.hpp  live_transcriber.cpp  live_transcriber.hpp  service_state.cpp  service_state.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp
src/domains/speech/: CMakeLists.txt  events.hpp  model.hpp  model_repository.cpp  model_repository.hpp  speech_backend.hpp  transcript.hpp  whisper_backend.cpp  whisper_backend.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/core/: CMakeLists.txt  test_error_event.cpp  test_event_bus.cpp  test_events.cpp
tests/domains/audio/: CMakeLists.txt  test_capture_device.cpp  test_events.cpp  test_recording.cpp  test_recording_manager.cpp
tests/domains/clipboard/: CMakeLists.txt  test_auto_clipboard.cpp  test_wl_clipboard_adapter.cpp
tests/domains/config/: CMakeLists.txt  test_configuration.cpp  test_configuration_manager.cpp  test_events.cpp  test_toml_codec.cpp
tests/domains/ipc/: CMakeLists.txt  test_client.hpp  test_command_dispatcher.cpp  test_event_bridge.cpp  test_ipc_server.cpp  test_ipc_service.cpp  test_message_codec.cpp
tests/domains/session/: CMakeLists.txt  test_events.cpp  test_live_transcriber.cpp  test_service_state.cpp  test_session.cpp  test_session_manager.cpp
tests/domains/speech/: CMakeLists.txt  test_events.cpp  test_model_repository.cpp  test_types.cpp  test_whisper_backend.cpp
